[gd_scene load_steps=3 format=3 uid="uid://bc4ig1es1jf7g"]

[ext_resource type="Script" path="res://addons/mariohelper/mod_packer.gd" id="1_54twy"]
[ext_resource type="Texture2D" uid="uid://62v31ceg67ur" path="res://addons/mariohelper/FolderBrowse.svg" id="2_sdf5y"]

[node name="ModPacker" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_54twy")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0

[node name="Levels" type="TabBar" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Levels"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
metadata/_edit_use_anchors_ = true

[node name="Container" type="VBoxContainer" parent="TabContainer/Levels/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 14
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="TabContainer/Levels/MarginContainer/Container"]
layout_mode = 2
text = "Level Folder Path:"

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Levels/MarginContainer/Container"]
layout_mode = 2

[node name="LevelExport" type="LineEdit" parent="TabContainer/Levels/MarginContainer/Container/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="TabContainer/Levels/MarginContainer/Container/HBoxContainer"]
layout_mode = 2
icon = ExtResource("2_sdf5y")

[node name="Label2" type="Label" parent="TabContainer/Levels/MarginContainer/Container"]
layout_mode = 2
text = "Level Info Path:"

[node name="HBoxContainer2" type="HBoxContainer" parent="TabContainer/Levels/MarginContainer/Container"]
layout_mode = 2

[node name="LevelInfo" type="LineEdit" parent="TabContainer/Levels/MarginContainer/Container/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="TabContainer/Levels/MarginContainer/Container/HBoxContainer2"]
layout_mode = 2
icon = ExtResource("2_sdf5y")

[node name="Button" type="Button" parent="TabContainer/Levels/MarginContainer/Container"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "Export Level!"

[node name="Mods (Broken)" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Mods (Broken)"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
metadata/_edit_use_anchors_ = true

[node name="Container" type="VBoxContainer" parent="TabContainer/Mods (Broken)/MarginContainer"]
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="TabContainer/Mods (Broken)/MarginContainer/Container"]
layout_mode = 2
text = "Files"

[node name="ItemList" type="ItemList" parent="TabContainer/Mods (Broken)/MarginContainer/Container"]
layout_mode = 2
size_flags_vertical = 3
auto_height = true

[node name="HSeparator" type="HSeparator" parent="TabContainer/Mods (Broken)/MarginContainer/Container"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Mods (Broken)/MarginContainer/Container"]
layout_mode = 2
size_flags_vertical = 3

[node name="AddFile" type="PanelContainer" parent="TabContainer/Mods (Broken)/MarginContainer/Container/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Mods (Broken)/MarginContainer/Container/HBoxContainer/AddFile"]
layout_mode = 2
alignment = 2

[node name="FilePath" type="LineEdit" parent="TabContainer/Mods (Broken)/MarginContainer/Container/HBoxContainer/AddFile/VBoxContainer"]
layout_mode = 2
placeholder_text = "File Path to add.."

[node name="AddPath" type="Button" parent="TabContainer/Mods (Broken)/MarginContainer/Container/HBoxContainer/AddFile/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.53524, 0.686283, 1, 1)
text = "Add Path to List."

[node name="ClearList" type="Button" parent="TabContainer/Mods (Broken)/MarginContainer/Container/HBoxContainer/AddFile/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.541241, 0.476759, 1)
text = "Clear List."

[node name="AddFile2" type="PanelContainer" parent="TabContainer/Mods (Broken)/MarginContainer/Container/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Mods (Broken)/MarginContainer/Container/HBoxContainer/AddFile2"]
layout_mode = 2
alignment = 2

[node name="PCKPath" type="LineEdit" parent="TabContainer/Mods (Broken)/MarginContainer/Container/HBoxContainer/AddFile2/VBoxContainer"]
layout_mode = 2
placeholder_text = "PCK File Name."

[node name="ExportPCK" type="Button" parent="TabContainer/Mods (Broken)/MarginContainer/Container/HBoxContainer/AddFile2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.488179, 1, 0.456277, 1)
text = "Export Mod!"

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a Directory"
initial_position = 4
ok_button_text = "Select Current Folder"
file_mode = 2

[node name="FileDialog2" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 4
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.tres")

[connection signal="pressed" from="TabContainer/Levels/MarginContainer/Container/HBoxContainer/Button" to="FileDialog" method="show"]
[connection signal="pressed" from="TabContainer/Levels/MarginContainer/Container/HBoxContainer2/Button" to="FileDialog2" method="show"]
[connection signal="pressed" from="TabContainer/Levels/MarginContainer/Container/Button" to="." method="export_level"]
[connection signal="pressed" from="TabContainer/Mods (Broken)/MarginContainer/Container/HBoxContainer/AddFile/VBoxContainer/AddPath" to="." method="_on_add_path_pressed"]
[connection signal="pressed" from="TabContainer/Mods (Broken)/MarginContainer/Container/HBoxContainer/AddFile/VBoxContainer/ClearList" to="." method="_on_clear_list_pressed"]
[connection signal="pressed" from="TabContainer/Mods (Broken)/MarginContainer/Container/HBoxContainer/AddFile2/VBoxContainer/ExportPCK" to="." method="_on_export_pck_pressed"]
[connection signal="dir_selected" from="FileDialog" to="TabContainer/Levels/MarginContainer/Container/HBoxContainer/LevelExport" method="set_text"]
[connection signal="file_selected" from="FileDialog2" to="TabContainer/Levels/MarginContainer/Container/HBoxContainer2/LevelInfo" method="set_text"]
